# jaqpot-api-client-python

./: README.md  pyproject.toml
.github/workflows/: pipy_release.yml  update-openapi-specs.yml
etc/: openapi-generate.sh
src/jaqpot_api_client/: __about__.py
