[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaqpot-api-client"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alex Arvanitidis", email = "alex_arvanitidis@mail.ntua.gr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Alex Arvanitidis/jaqpot-api-client#readme"
Issues = "https://github.com/Alex Arvanitidis/jaqpot-api-client/issues"
Source = "https://github.com/Alex Arvanitidis/jaqpot-api-client"

[tool.hatch.version]
path = "src/jaqpot_api_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/jaqpot_api_client tests}"

[tool.coverage.run]
source_pkgs = ["jaqpot_api_client", "tests"]
branch = true
parallel = true
omit = [
  "src/jaqpot_api_client/__about__.py",
]

[tool.coverage.paths]
jaqpot_api_client = ["src/jaqpot_api_client", "*/jaqpot-api-client/src/jaqpot_api_client"]
tests = ["tests", "*/jaqpot-api-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
